# motion-capture-lite

./: README.md  beamer_wifi.ino  graycoding.py  location.py  orientation.py  serial_read.py  tag_wifi.ino  timelog.md  udp_server.py  udp_server_calibrate.py
WiFi/Arduino/: arudino_1.ino  arudino_2.ino  beamer_wifi.ino  beamer_wifi_24_feb.ino  tag_wifi.ino  tag_wifi_24_feb.ino  tag_wifi_feb_28.ino
WiFi/Arduino/arduino_1/: arduino_1.ino
WiFi/Python/: udp_server.py
WiFi/sadihas/: receiving.py  sending.py
WiFi/wifi_test/: Cargo.toml
WiFi/wifi_test/src/: main.rs
arduino/: beamer.ino  serial_read.py  tag.ino  tag_read_leds_improved.ino
arduino/UART_Master/: UART_Master.ino
arduino/UART_Slave/: UART_Slave.ino
arduino/beamer/: beamer.ino
arduino/tag/: tag.ino
gui/python/: main.py  viz.py
gui/rust/: Cargo.toml
gui/rust/src/: main.rs
old/: graycoding.py  orientation.py
old/TagBeamerBackups/: beamer_wifi_24_feb.ino  beamer_wifi_feb_28.ino  beamer_wifi_no_led_buffer.ino  tag_wifi_24_feb.ino
old/arduino/: tag.ino
old/arduino/UART_Master/: UART_Master.ino
old/arduino/beamer/: beamer.ino
old/model/: point.py
old/python/: viz.py
old/utils/: constants.py
schematics/: Beamer.kicad_pcb  Beamer.kicad_sch  Beamer_box_complete.3mf  Lid_tag-tag_lid_complete.3mf  Tag.kicad_pcb  Tag.kicad_sch
unit_tests/: generate_region_tests.py  generate_relative_location_tests.py  get_beamer_angles_test.py
utils/: constants.py
wifi/Python/: visualization.py
