[package]
name = "wifi_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue="2.4.0"
eframe = { features = ["default", "__screenshot"] }
egui_extras = { features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }